refactor: add server auth
