# app/schemas/auth.schema.ts
@@ -12,10 +12,6 @@ export const SignupSchema = SigninSchema.extend({
   name: z.string().min(2, 'Name must be at least 2 characters')
 })
 
-export const RefreshTokenSchema = z.object({
-  refreshToken: z.string().min(1, 'Refresh token is required')
-})
-
 export const GoogleCodeSchema = z.object({
   code: z.string().min(1, 'Code is required'),
   state: z.string().min(1, 'State is required')
